[PLATFORM-1445] Fix product page layout breaking on small screens (#1057)
* Make TimeSeriesGraph responsive
* Make product page work on smaller screens

--- a/app/src/marketplace/containers/ProductPage/dataUnionStats.pcss
+++ b/app/src/marketplace/containers/ProductPage/dataUnionStats.pcss
@@ -45,6 +45,7 @@
 
 .membersGraph {
   padding: 2em;
+  height: 360px;
 }
 
 .memberDonut {
